[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Ain Tohvri <ain@flashbit.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mutex"
path = "src/lib/mutex.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
rand = "0.8.1"
