[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Ain Tohvri <ain@flashbit.net>"]
edition = "2018"

[workspace]

[dependencies]
rand = "0.8.1"
mutex = { path = "mutex" }
reference_counter = { path = "reference_counter" }
circular_references = { path = "circular_references" }
collections = { path = "collections" }
concurrency = { path = "concurrency" }
