[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Ain Tohvri <ain@flashbit.net>"]
edition = "2018"

[workspace]

[dependencies]
mutex = { path = "mutex" }
reference_counter = { path = "reference_counter" }
circular_references = { path = "circular_references" }
collections = { path = "collections" }
concurrency = { path = "concurrency" }
controlflow = { path = "controlflow" }
datastructures = { path = "datastructures" }
external_dependencies = { path = "external_dependencies" }
functions = { path = "functions" }
lifetime = { path = "lifetime" }
memory_ownership = { path = "memory_ownership" }
stringformatter = { path = "stringformatter" }
traits = { path = "traits" }
